# family-office-reporting

./: .env.example  .gitignore  AGENT_CONTEXT.md  ARCHITECTURE.md  CHAT_START_PROMPT.md  DEEP_CONTEXT.md  Dockerfile.backend  Dockerfile.frontend  PLAN_AGENTE_AUDITORIA_REVISION.md  PLAN_SSOT_SUPER_TABLA.md  Proyectos VS Code.lnk  README.md  SESSION_STATE.md  alembic.ini  asset_bucket_dictionary.json  asset_taxonomy.py  backend_runtime.err  bug_report.md  docker-compose.yml  etf_instrument_dictionary.py  frontend_runtime.err  mandate_report_dictionary.json  mandate_taxonomy.py  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml
Reporting APP/: ARCHITECTURE.md  DESIGN_SYSTEM.md  README.md  RULES_INHERITED.md  index.html
alembic/: env.py
backend/: config.py  main.py  schemas.py
calculations/: __init__.py  allocation.py  profit.py  reconciliation.py
frontend/: api_client.py  app.py
parsers/: __init__.py  base.py  registry.py
scripts/: analysis_bbh.txt  analysis_bice.txt  analysis_goldman_etf.txt  analysis_goldman_mandato.txt  analysis_jpmorgan_bonds.txt  analysis_jpmorgan_brokerage.txt  analysis_jpmorgan_etf.txt  analysis_jpmorgan_mandato.txt  analysis_ubs_miami.txt  analysis_ubs_suiza.txt  analyze_pdfs.py  audit_cartola_outliers.py  audit_cartolas_lista_revision.md  backfill_mandate_asset_allocation.py  backfill_normalized_metrics.py  backfill_super_tabla_normalized.py  deep_analyze_pdfs.py  diagnose_jpm_brokerage_cash.py  freeze.py  report_caja_boatview_202512.py  reprocess_bice.py  restore.py  start.ps1  start_new_frontend.ps1  stop.ps1  (+6 more)
(+118 files in other folders)
